<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nulleye.udacity.spotifystreamer.ToptracksActivity">


    <item android:id="@+id/action_now_playing"
        android:title="@string/action_now_playing"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_play_circle_filled"
        android:visible="false" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share_artist"
        android:orderInCategory="110"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="200"
        app:showAsAction="never" />

</menu>
